Fix title alignment

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -45,7 +45,6 @@ h6 {
   font-weight: bold;
   letter-spacing: 1px;
   text-transform: uppercase;
-  text-align: center;
 }
 
 p {
